# crop-oracle

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: fields.py  map.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: __init__.py  domain.py
app/schemas/: domain.py
app/services/: prediction.py
docs/: VARTOPO_OBSERVATION_WORKFLOW.md
frontend/: app.js  index.html  style.css
tests/: conftest.py  test_api.py
